--- a/.github/workflows/tail.yml
+++ b/.github/workflows/tail.yml
@@ -15,8 +15,11 @@ jobs:
         run: |
           sudo apt update -y
           sudo apt install qemu-kvm cpulimit wget -y
-          curl -fsSL https://tailscale.com/install.sh | sh
-          sudo tailscale up
+          wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz
+          tar -xf ngrok-v3-stable-linux-amd64.tgz
+          chmod +x ngrok
+          ./ngrok config add-authtoken "${{ github.event.inputs.ngrok }}"
+          nohup ./ngrok tcp --region ap 5900 &>/dev/null &
       - name: cài win và khởi chạy
         run: |
           sudo chmod 666 /dev/kvm
